# DevMate_li

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_mcp.py  test_setup.py
docs/: 内部开发规范 V1.0.md
output/hiking_trails_app/: README.md  main.py  run.sh
output/hiking_trails_app/static/: index.html
src/: agent.py  config.py  rag.py  search_server.py
